# api-almanac-rust

./: .gitignore  API-ALMANAC.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  build  gen_icon.py  index.html  package-lock.json  package.json  tsconfig.node.json
crates/api-almanac-cli/: Cargo.toml
crates/api-almanac-cli/src/: main.rs
crates/api-almanac-export/: Cargo.toml
crates/api-almanac-export/src/: lib.rs
crates/api-almanac-model/: Cargo.toml
crates/api-almanac-model/src/: body.rs  environment.rs  error.rs  lib.rs  loader.rs  project.rs  request.rs  resolved.rs  resolver.rs  uid.rs
crates/api-almanac-runner/: Cargo.toml
crates/api-almanac-runner/src/: checker.rs  error.rs  lib.rs  response.rs  runner.rs
crates/api-almanac-store/: Cargo.toml
crates/api-almanac-store/src/: lib.rs
crates/api-almanac-tools/: Cargo.toml
crates/api-almanac-tools/src/: lib.rs
crates/api-almanac-typesketch/: Cargo.toml
crates/api-almanac-typesketch/src/: lib.rs
demos/open-meteo/: PROMPT.md  almanac.yaml
demos/open-meteo/environments/: default.yaml
demos/open-meteo/requests/air-quality/: european-aqi.yaml
demos/open-meteo/requests/forecast/: current-weather.yaml  daily-forecast.yaml  hourly-forecast.yaml
demos/open-meteo/requests/historical/: past-week.yaml
docs/: BLUEPRINT-query-identity.md  BLUEPRINT.md
examples/tools/: top-keys.py  top-keys.yaml
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
