[package]
name = "api-almanac"
version = "0.0.1"
edition = "2021"

[lib]
name = "api_almanac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
api-almanac-model = { path = "../crates/api-almanac-model" }
api-almanac-runner = { path = "../crates/api-almanac-runner" }
api-almanac-typesketch = { path = "../crates/api-almanac-typesketch" }
api-almanac-export = { path = "../crates/api-almanac-export" }
api-almanac-tools  = { path = "../crates/api-almanac-tools" }
api-almanac-store  = { path = "../crates/api-almanac-store" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
